syntax = "proto3";

option go_package = "api/v1";

package grpcdemo.v1;

import "google/protobuf/any.proto";

// The greeter service definition.
service Hello {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc GetID (GetIdReq) returns (GetIDsResp) {}

  rpc GetView(GetViewReq) returns (GetViewResp) {}

  rpc GetStream(GetStreamReq) returns (stream GetStreamResp){}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message GetViewReq {
  string name = 1;
  repeated UserViewItem views = 2;
}

message UserViewItem {
  // 视图枚举
  UserViewEnum view = 1;
  // 如果某种view获取信息时需要有额外信息，那么view提供方定义好对应的option要求调用方传入，例如fans_medal_option 或user_reserve_option
  google.protobuf.Any options = 2;
}
enum UserViewEnum {
  // 无视图，占位不可使用
  NONE_VIEW = 0;
  // 用户基础信息的视图，视图返回信息见BASEINFO，如果请求包含此视图但获取失败则报错；
  BASE_INFO_VIEW = 1;
}
message FansMedalOptions {
  // 某个up主的粉丝勋章，即获取mids是否拥有该up_mid的粉丝勋章，对应视图：REPLY_FANS_MEDAL_VIEW 和  REPLY_FANS_MEDAL_V2_VIEW
  int64 up_mid = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  int64 num = 2;
}

message GetIdReq {

}

message GetIDsResp {
  repeated int64 ids = 1;
}

message GetViewResp{
  string name = 1;
  int64 num = 2;
}

message GetStreamReq{
  string name = 1;
}
message GetStreamResp{
  string result = 1;
}